--- a/app/page.module.css
+++ b/app/page.module.css
@@ -26,7 +26,7 @@
 .landing {
   background: var(--color-white);
   color: var(--color-black);
-  padding: 2em;
+  padding: 5em 4em;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 12em;
