--- a/app/page.module.css
+++ b/app/page.module.css
@@ -28,8 +28,25 @@
   color: var(--color-black);
   padding: 5em 4em;
   display: grid;
+  position: relative;
   grid-template-columns: 1fr 1fr;
   gap: 12em;
+}
+
+.landing div:nth-child(-n + 2) {
+  z-index: 100;
+}
+
+.aboutDeco {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.aboutDeco * {
+  object-fit: cover;
 }
 
 .landingHeader {
@@ -50,8 +67,21 @@
   text-align: right;
 }
 
-.landingImg div {
+.landingImg {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  align-items: center;
+}
+
+.illustration {
   background: #c24e1d;
   width: 50%;
-  height: 80%;
+  height: 90%;
+}
+
+.landingImgText {
+  width: 50%;
+  text-align: right;
+  padding: 0 0.2em;
 }
